service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-qrcode-service
spec:
  selector:
    app: flask-qrcode
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
